# BasicAIChat

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/examples/: simple_widget.py
src/utils/: util.py
