[tool.poetry]
name = "basicaichat"
version = "0.1.0"
description = ""
authors = ["hyunchangsung"]
license = "Mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.27.1"
fastapi = "^0.110.0"
langchain = "^0.1.9"
openai = "^1.12.0"
chromadb = "^0.4.23"
tiktoken = "^0.6.0"
langchain-openai = "^0.0.7"
langserve = "^0.0.42"
langchain-community = "^0.0.24"
sse-starlette = "^2.0.0"
anthropic = "^0.16.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
